Simple state management for Locale

--- a/localizations/app_en.arb
+++ b/localizations/app_en.arb
@@ -10,5 +10,9 @@
   "time": "Time:",
   "@time": {
     "description": "Label for time"
+  },
+  "selectLanguage": "Select language",
+  "@time": {
+    "description": "Label for app language settings"
   }
 }
