--- a/localizations/app_nl.arb
+++ b/localizations/app_nl.arb
@@ -1,5 +1,6 @@
 {
   "homeTitle": "Onderwerpen",
   "date": "Datum:",
-  "time": "Tijd:"
+  "time": "Tijd:",
+  "selectLanguage": "Kies een taal"
 }
