Talks state management

--- a/localizations/app_nl.arb
+++ b/localizations/app_nl.arb
@@ -2,5 +2,6 @@
   "homeTitle": "Onderwerpen",
   "date": "Datum:",
   "time": "Tijd:",
-  "selectLanguage": "Kies een taal"
+  "selectLanguage": "Kies een taal",
+  "noInternetError": "Geen internetverbinding"
 }
