--- a/localizations/app_en.arb
+++ b/localizations/app_en.arb
@@ -14,5 +14,9 @@
   "selectLanguage": "Select language",
   "@time": {
     "description": "Label for app language settings"
-  }
+  },
+     "noInternetError": "You are not connected to the internet",
+     "@time": {
+       "description": "Error message for no internet connection"
+     }
 }
